gpodderpreferences.ui: Replace icon stock-ids with GTK icon names

--- a/share/gpodder/ui/gtk/gpodderpreferences.ui
+++ b/share/gpodder/ui/gtk/gpodderpreferences.ui
@@ -130,7 +130,7 @@
                           <object class="GtkImage" id="image4">
                             <property name="visible">True</property>
                             <property name="can-focus">False</property>
-                            <property name="stock">gtk-edit</property>
+                            <property name="icon-name">gtk-edit</property>
                           </object>
                         </child>
                       </object>
@@ -173,7 +173,7 @@
                           <object class="GtkImage" id="image3">
                             <property name="visible">True</property>
                             <property name="can-focus">False</property>
-                            <property name="stock">gtk-edit</property>
+                            <property name="icon-name">gtk-edit</property>
                           </object>
                         </child>
                       </object>
