gpodder.ui: Set can-focus to True in search entries

--- a/share/gpodder/ui/gtk/gpodder.ui
+++ b/share/gpodder/ui/gtk/gpodder.ui
@@ -190,7 +190,7 @@
                             <child>
                               <object class="GtkEntry" id="entry_search_podcasts">
                                 <property name="visible">True</property>
-                                <property name="can-focus">False</property>
+                                <property name="can-focus">True</property>
                                 <property name="hexpand">True</property>
                                 <property name="secondary-icon-stock">gtk-close</property>
                               </object>
@@ -421,7 +421,7 @@
                             <child>
                               <object class="GtkEntry" id="entry_search_episodes">
                                 <property name="visible">True</property>
-                                <property name="can-focus">False</property>
+                                <property name="can-focus">True</property>
                                 <property name="hexpand">True</property>
                                 <property name="secondary-icon-stock">gtk-close</property>
                               </object>
