--- a/share/gpodder/ui/gtk/gpodder.ui
+++ b/share/gpodder/ui/gtk/gpodder.ui
@@ -68,7 +68,7 @@
                 <property name="is-important">True</property>
                 <property name="label" translatable="yes">Cancel</property>
                 <property name="use-underline">True</property>
-                <property name="icon-name">gtk-cancel</property>
+                <property name="icon-name">process-stop</property>
                 <signal name="clicked" handler="on_item_cancel_download_activate" swapped="no"/>
               </object>
               <packing>
@@ -92,7 +92,7 @@
                 <property name="can-focus">False</property>
                 <property name="action-name">app.preferences</property>
                 <property name="label" translatable="yes">Preferences</property>
-                <property name="icon-name">gtk-preferences</property>
+                <property name="icon-name">preferences-desktop</property>
               </object>
               <packing>
                 <property name="expand">False</property>
@@ -114,7 +114,7 @@
                 <property name="visible">True</property>
                 <property name="can-focus">False</property>
                 <property name="label" translatable="yes">Quit</property>
-                <property name="icon-name">gtk-quit</property>
+                <property name="icon-name">application-exit</property>
                 <signal name="clicked" handler="on_gPodder_delete_event" swapped="no"/>
               </object>
               <packing>
@@ -193,7 +193,7 @@
                                 <property name="visible">True</property>
                                 <property name="can-focus">True</property>
                                 <property name="hexpand">True</property>
-                                <property name="secondary-icon-name">gtk-close</property>
+                                <property name="secondary-icon-name">edit-clear</property>
                               </object>
                               <packing>
                                 <property name="left-attach">0</property>
@@ -253,7 +253,7 @@
                                       <object class="GtkImage" id="image3209">
                                         <property name="visible">True</property>
                                         <property name="can-focus">False</property>
-                                        <property name="icon-name">gtk-cancel</property>
+                                        <property name="icon-name">process-stop</property>
                                       </object>
                                     </child>
                                   </object>
@@ -339,7 +339,7 @@
                                 <property name="visible">True</property>
                                 <property name="can-focus">True</property>
                                 <property name="hexpand">True</property>
-                                <property name="secondary-icon-name">gtk-close</property>
+                                <property name="secondary-icon-name">edit-clear</property>
                               </object>
                               <packing>
                                 <property name="left-attach">1</property>
