--- a/share/gpodder/ui/gtk/gpodderepisodeselector.ui
+++ b/share/gpodder/ui/gtk/gpodderepisodeselector.ui
@@ -132,7 +132,7 @@
                           <object class="GtkImage" id="image2636">
                             <property name="visible">True</property>
                             <property name="can-focus">False</property>
-                            <property name="icon-name">gtk-apply</property>
+                            <property name="icon-name">object-select</property>
                           </object>
                           <packing>
                             <property name="expand">False</property>
@@ -177,7 +177,7 @@
                           <object class="GtkImage" id="image2635">
                             <property name="visible">True</property>
                             <property name="can-focus">False</property>
-                            <property name="icon-name">gtk-revert-to-saved</property>
+                            <property name="icon-name">document-revert</property>
                           </object>
                           <packing>
                             <property name="expand">False</property>
